--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,7 @@
   </classpathentry>
   <classpathentry kind="src" path="/com.idega.core">
   </classpathentry>
-  <classpathentry kind="var" path="MAVEN_REPO/jdom/jars/jdom-b9-rc2.jar">
+  <classpathentry kind="src" path="/com.idega.faces">
   </classpathentry>
   <classpathentry kind="var" path="MAVEN_REPO/servletapi/jars/servletapi-2.3.jar">
   </classpathentry>
@@ -20,10 +20,6 @@
   <classpathentry kind="var" path="MAVEN_REPO/icu4j/jars/icu4j-2.4.jar">
   </classpathentry>
   <classpathentry kind="var" path="MAVEN_REPO/jsf/jars/jsf-api-1.0.jar">
-  </classpathentry>
-  <classpathentry kind="var" path="MAVEN_REPO/commons-jelly/jars/commons-jelly-tags-velocity-SNAPSHOT.jar">
-  </classpathentry>
-  <classpathentry kind="var" path="MAVEN_REPO/velocity/jars/velocity-1.3.jar">
   </classpathentry>
   <classpathentry kind="output" path="target/classes">
   </classpathentry>
