--- a/.project
+++ b/.project
@@ -6,6 +6,7 @@
   </comment>
   <projects>
     <project>com.idega.core</project>
+    <project>com.idega.faces</project>
   </projects>
   <buildSpec>
     <buildCommand>
