--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
   	<groupId>com.idega.block.platform</groupId>
-  	<artifactId>com.idega.block.base</artifactId>
-  	<version>4.0.0</version>
+  	<artifactId>com.idega.block.platform</artifactId>
+  	<version>4.0.0-SNAPSHOT</version>
   </parent>
   <packaging>jar</packaging>
   <groupId>com.idega.block.platform</groupId>
-  <name>idegaWeb WebFace</name>
   <artifactId>com.idega.webface</artifactId>
-  <version>4.0.0</version>
+  <version>4.0.0-SNAPSHOT</version>
+  <name>idegaWeb WebFace</name>
   <inceptionYear>2003</inceptionYear>
   <description>idegaWeb WebFace is a component API Built on JavaServer Faces</description>
   <scm>
@@ -43,17 +43,14 @@
     <dependency>
       <groupId>com.idega.block.platform</groupId>
       <artifactId>com.idega.core</artifactId>
-      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.idega.block.platform</groupId>
       <artifactId>com.idega.faces</artifactId>
-      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.idega.block.platform</groupId>
       <artifactId>com.idega.block.web2.0</artifactId>
-      <version>4.0.0</version>
     </dependency>    
   </dependencies>
 </project>
