--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <parent>
   	<groupId>com.idega.block.platform</groupId>
   	<artifactId>com.idega.block.platform</artifactId>
-  	<version>4.0.1</version>
+  	<version>4.0.2-SNAPSHOT</version>
   </parent>
   <packaging>jar</packaging>
   <groupId>com.idega.block.platform</groupId>
   <artifactId>com.idega.webface</artifactId>
-  <version>4.0.1</version>
+  <version>4.0.2-SNAPSHOT</version>
   <name>idegaWeb WebFace</name>
   <inceptionYear>2003</inceptionYear>
   <description>idegaWeb WebFace is a component API Built on JavaServer Faces</description>
@@ -21,7 +21,6 @@
     -->
     <connection>scm:cvs:ext:civilis@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.webface/</connection>
     <developerConnection>scm:cvs:ext:civilis@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.webface/</developerConnection>
-    <tag>com_idega_block_platform_super-4_0_1</tag>
   </scm>
 
   <developers>
