--- a/pom.xml
+++ b/pom.xml
@@ -5,25 +5,24 @@
   <parent>
   	<groupId>com.idega.block.platform</groupId>
   	<artifactId>com.idega.block.platform</artifactId>
-  	<version>4.0.2</version>
+  	<version>4.0.3-SNAPSHOT</version>
   </parent>
   <packaging>jar</packaging>
   <groupId>com.idega.block.platform</groupId>
   <artifactId>com.idega.webface</artifactId>
-  <version>4.0.2</version>
+  <version>4.0.3-SNAPSHOT</version>
   <name>idegaWeb WebFace</name>
   <inceptionYear>2003</inceptionYear>
   <description>idegaWeb WebFace is a component API Built on JavaServer Faces</description>
   <scm>
     
-    <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
-    <developerConnection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</developerConnection> 
+    <connection>scm:cvs:ext:alexis@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.webface/</connection>
+    <developerConnection>scm:cvs:ext:alexis@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.webface/</developerConnection> 
     
     <!--
     <connection>scm:cvs:ext:civilis@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.webface/</connection>
     <developerConnection>scm:cvs:ext:civilis@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.webface/</developerConnection>
     -->
-    <tag>com_idega_block_platform-4_0_2</tag>
   </scm>
 
   <developers>
